# python-dis-esolang

./: LICENSE  README.md  pyproject.toml
src/dis_esolang/: __init__.py  __main__.py  dis_esolang.py
