[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dis-esolang"
version = "0.0.1"
authors = [
	{ name = "Tpaefawzen",
		email = ""
	}
]
description = "Implementation of esoteric language Dis, Malbolge's wimpmode"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: ISC License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Tpaefawzen/python-dis-esolang"
"Bug Tracker" = "https://github.com/Tpaefawzen/python-dis-esolang/issues"
